--- a/build.gradle
+++ b/build.gradle
@@ -24,13 +24,21 @@ repositories {
 }
 
 dependencies {
+    // Spring WebFlux (Netty 포함)
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+    // 기존 의존성 유지
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    // spring-boot-starter-web 제거 또는 주석 처리 (WebFlux와 충돌 방지)
+    // implementation 'org.springframework.boot:spring-boot-starter-web'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     annotationProcessor 'org.projectlombok:lombok'
+    
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'io.projectreactor:reactor-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
