--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=netty
+
+server.ssl.key-store=classpath:keystore.jks
+server.ssl.key-store-password=your-password
+server.ssl.key-alias=your-alias
