--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,12 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation "org.springframework.boot:spring-boot-starter-data-r2dbc"
+    implementation "io.r2dbc:r2dbc-h2" // 또는 r2dbc-postgresql
+    runtimeOnly "com.h2database:h2"
+
+    implementation "com.fasterxml.jackson.core:jackson-databind"
 }
 
 tasks.named('test') {
